Added inject point @ReplaceAll